pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
