Replicaset.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    tier: part2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
