ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: part3
  labels:
    app: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: part3
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: serice-ingress
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-gougueule
spec:
  rules:
    - host: gougueule.com
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: serice-ingress
                port:
                  number: 8080
